// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processes events in a specific month > buffers 1`] = `
Map {
  "302" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-06T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes events in a specific month > estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, statGroup: MC, operation: progt}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part222}, statGroup: MC, operation: progV}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: progz}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
}
`;

exports[`processes events in a specific month > inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 63186,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialS",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "works",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 63186,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 63186,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialS",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "works",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "309" => {
      "cntr": 309,
      "inspType": "Insp1",
      "materialID": 92455,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialV",
      "time": 2018-01-06T09:57:10.000Z,
      "workorder": "work2",
    },
    "308" => {
      "cntr": 308,
      "inspType": "Insp1",
      "materialID": 92455,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 92455,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialV",
      "time": 2018-01-06T09:50:10.000Z,
      "workorder": "work2",
    },
    "307" => {
      "cntr": 307,
      "inspType": "Insp1",
      "materialID": 92455,
      "part": "part222",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialV",
      "time": 2018-01-06T09:50:05.000Z,
      "workorder": "work2",
    },
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 83004,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serial9",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workF",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 83004,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 83004,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serial9",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workF",
    },
  },
}
`;

exports[`processes events in a specific month > material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqC" => [
      92455,
    ],
    "uniqM" => [
      83004,
    ],
    "uniqp" => [
      63186,
    ],
  },
  "matsById": Map {
    "83004" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqM",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 83004,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "63186" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "jobUnique": "uniqp",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 63186,
      "numProcesses": 2,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "92455" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-06T09:57:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:57:10.000Z,
      "jobUnique": "uniqC",
      "last_event": 2018-01-06T09:57:10.000Z,
      "last_unload_time": 2018-01-06T09:45:05.000Z,
      "materialID": 92455,
      "numProcesses": 4,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "2": 2018-01-06T09:45:05.000Z,
      },
    },
  },
}
`;

exports[`processes events in a specific month > pallet cycles 1`] = `
Map {
  "palaa" => Map {
    "309" => {
      "active": -1,
      "cntr": 309,
      "x": 2018-01-06T09:50:10.000Z,
      "y": 44,
    },
  },
  "palbb" => Map {
    "208" => {
      "active": -1,
      "cntr": 208,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    "108" => {
      "active": -1,
      "cntr": 108,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes events in a specific month > station cycles 1`] = `
Map {
  "306" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 306,
    "isLabor": true,
    "material": [
      {
        "face": "facev",
        "id": 92455,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialV",
        "uniq": "uniqC",
        "workorder": "work2",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-06T09:45:05.000Z,
    "y": 3,
  },
  "304" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 304,
    "isLabor": false,
    "material": [
      {
        "face": "facev",
        "id": 92455,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialV",
        "uniq": "uniqC",
        "workorder": "work2",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "progV",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-06T09:35:05.000Z,
    "y": 18,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "isLabor": true,
    "material": [
      {
        "face": "faceF",
        "id": 83004,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqM",
        "workorder": "workF",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  "300" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 300,
    "isLabor": true,
    "material": [
      {
        "face": "facev",
        "id": 92455,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialV",
        "uniq": "uniqC",
        "workorder": "work2",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-06T09:09:05.000Z,
    "y": 6,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "isLabor": false,
    "material": [
      {
        "face": "faceF",
        "id": 83004,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqM",
        "workorder": "workF",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progz",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "isLabor": true,
    "material": [
      {
        "face": "facep",
        "id": 63186,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serialS",
        "uniq": "uniqp",
        "workorder": "works",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "isLabor": true,
    "material": [
      {
        "face": "faceF",
        "id": 83004,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqM",
        "workorder": "workF",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "isLabor": false,
    "material": [
      {
        "face": "facep",
        "id": 63186,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serialS",
        "uniq": "uniqp",
        "workorder": "works",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progt",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "isLabor": true,
    "material": [
      {
        "face": "facep",
        "id": 63186,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serialS",
        "uniq": "uniqp",
        "workorder": "works",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
}
`;

exports[`processes last 30 events > after filter - buffers 1`] = `
Map {
  "402" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-08T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes last 30 events > after filter - estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, statGroup: MC, operation: progZ}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part222}, statGroup: MC, operation: progR}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part222}, statGroup: MC, operation: prog6}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
}
`;

exports[`processes last 30 events > after filter - event counter 1`] = `408`;

exports[`processes last 30 events > after filter - inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "408" => {
      "cntr": 408,
      "inspType": "Insp1",
      "materialID": 77508,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialZ",
      "time": 2018-02-08T09:51:05.000Z,
      "workorder": "workC",
    },
    "407" => {
      "cntr": 407,
      "inspType": "Insp1",
      "materialID": 77508,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 77508,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialZ",
      "time": 2018-02-08T09:44:05.000Z,
      "workorder": "workC",
    },
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialh",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "workc",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 70329,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialh",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "workc",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 48405,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialO",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workr",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 48405,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 48405,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialO",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workr",
    },
  },
}
`;

exports[`processes last 30 events > after filter - material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqt" => [
      77508,
    ],
    "uniqv" => [
      70329,
    ],
    "uniqC" => [
      48405,
    ],
  },
  "matsById": Map {
    "70329" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "jobUnique": "uniqv",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 70329,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "48405" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqC",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 48405,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "77508" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-08T09:51:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-08T09:51:05.000Z,
      "jobUnique": "uniqt",
      "last_event": 2018-02-08T09:51:05.000Z,
      "last_unload_time": 2018-02-08T09:39:05.000Z,
      "materialID": 77508,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-08T09:39:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events > after filter - pallet cycles 1`] = `
Map {
  "palcc" => Map {
    "408" => {
      "active": -1,
      "cntr": 408,
      "x": 2018-02-08T09:44:05.000Z,
      "y": 44,
    },
  },
  "palbb" => Map {
    "208" => {
      "active": -1,
      "cntr": 208,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    "108" => {
      "active": -1,
      "cntr": 108,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes last 30 events > after filter - station cycles 1`] = `
Map {
  "406" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 406,
    "isLabor": true,
    "material": [
      {
        "face": "faceN",
        "id": 77508,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialZ",
        "uniq": "uniqt",
        "workorder": "workC",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-08T09:39:05.000Z,
    "y": 3,
  },
  "404" => {
    "MAD_aboveMinutes": 0,
    "activeMinutes": 12,
    "cntr": 404,
    "isLabor": false,
    "material": [
      {
        "face": "faceN",
        "id": 77508,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialZ",
        "uniq": "uniqt",
        "workorder": "workC",
      },
    ],
    "medianCycleMinutes": 0,
    "operation": "progE",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-08T09:29:05.000Z,
    "y": 12,
  },
  "400" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 400,
    "isLabor": true,
    "material": [
      {
        "face": "faceN",
        "id": 77508,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialZ",
        "uniq": "uniqt",
        "workorder": "workC",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-08T09:09:05.000Z,
    "y": 6,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "isLabor": true,
    "material": [
      {
        "face": "faceT",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "isLabor": false,
    "material": [
      {
        "face": "faceT",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progR",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "isLabor": true,
    "material": [
      {
        "face": "face7",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "isLabor": true,
    "material": [
      {
        "face": "faceT",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "isLabor": false,
    "material": [
      {
        "face": "face7",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progZ",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "isLabor": true,
    "material": [
      {
        "face": "face7",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
}
`;

exports[`processes last 30 events > after filter - tool use 1`] = `
Map {
  "{part: part111}, statGroup: MC, operation: progZ}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "9",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.5166666666666667,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "i",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: progR}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.7833333333333333,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "c",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: prog6}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.31666666666666665,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "E",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.4,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "L",
        },
      ],
    },
  ],
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - buffers 1`] = `
Map {
  "302" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-06T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, statGroup: MC, operation: progZ}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part222}, statGroup: MC, operation: progR}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part222}, statGroup: MC, operation: prog6}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - event counter 1`] = `309`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialh",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "workc",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 70329,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialh",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "workc",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "309" => {
      "cntr": 309,
      "inspType": "Insp1",
      "materialID": 70517,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialU",
      "time": 2018-01-06T09:57:10.000Z,
      "workorder": "workf",
    },
    "308" => {
      "cntr": 308,
      "inspType": "Insp1",
      "materialID": 70517,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 70517,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialU",
      "time": 2018-01-06T09:50:10.000Z,
      "workorder": "workf",
    },
    "307" => {
      "cntr": 307,
      "inspType": "Insp1",
      "materialID": 70517,
      "part": "part222",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialU",
      "time": 2018-01-06T09:50:05.000Z,
      "workorder": "workf",
    },
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 48405,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialO",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workr",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 48405,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 48405,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialO",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workr",
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqv" => [
      70329,
    ],
    "uniqQ" => [
      70517,
    ],
    "uniqC" => [
      48405,
    ],
  },
  "matsById": Map {
    "70329" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "jobUnique": "uniqv",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 70329,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "70517" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-06T09:57:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:57:10.000Z,
      "jobUnique": "uniqQ",
      "last_event": 2018-01-06T09:57:10.000Z,
      "last_unload_time": 2018-01-06T09:45:05.000Z,
      "materialID": 70517,
      "numProcesses": 1,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "2": 2018-01-06T09:45:05.000Z,
      },
    },
    "48405" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqC",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 48405,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - pallet cycles 1`] = `
Map {
  "palaa" => Map {
    "309" => {
      "active": -1,
      "cntr": 309,
      "x": 2018-01-06T09:50:10.000Z,
      "y": 44,
    },
  },
  "palbb" => Map {
    "208" => {
      "active": -1,
      "cntr": 208,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    "108" => {
      "active": -1,
      "cntr": 108,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - station cycles 1`] = `
Map {
  "306" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 306,
    "isLabor": true,
    "material": [
      {
        "face": "faceH",
        "id": 70517,
        "numproc": 1,
        "part": "part222",
        "proc": 2,
        "serial": "serialU",
        "uniq": "uniqQ",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-06T09:45:05.000Z,
    "y": 3,
  },
  "304" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 304,
    "isLabor": false,
    "material": [
      {
        "face": "faceH",
        "id": 70517,
        "numproc": 1,
        "part": "part222",
        "proc": 2,
        "serial": "serialU",
        "uniq": "uniqQ",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "prog6",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-06T09:35:05.000Z,
    "y": 18,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "isLabor": true,
    "material": [
      {
        "face": "faceT",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  "300" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 300,
    "isLabor": true,
    "material": [
      {
        "face": "faceH",
        "id": 70517,
        "numproc": 1,
        "part": "part222",
        "proc": 2,
        "serial": "serialU",
        "uniq": "uniqQ",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-06T09:09:05.000Z,
    "y": 6,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "isLabor": false,
    "material": [
      {
        "face": "faceT",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progR",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "isLabor": true,
    "material": [
      {
        "face": "face7",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "isLabor": true,
    "material": [
      {
        "face": "faceT",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "isLabor": false,
    "material": [
      {
        "face": "face7",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progZ",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "isLabor": true,
    "material": [
      {
        "face": "face7",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - tool use 1`] = `
Map {
  "{part: part111}, statGroup: MC, operation: progZ}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "9",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.5166666666666667,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "i",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: progR}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.7833333333333333,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "c",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: prog6}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.31666666666666665,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "E",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.4,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "L",
        },
      ],
    },
  ],
}
`;
